# building-data-utilities

./: .cspell.json  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  README.md  main.py  pyproject.toml
.github/: dependabot.yml
.github/workflows/: build.yml  ci.yml  pypi_release.yml
.github/workflows/workflows/: build.yml  ci.yml
building_data_utilities/: README.md  __init__.py  chunk.py  geocode_addresses.py  normalize_address.py  shp_to_geojson.py  ubid.py  update_quadkeys.py
building_data_utilities/utils/: __init__.py  chunk.py  common.py  geocode_addresses.py  geojson_helpers.py  open_street_map.py  shp_to_geojson.py  update_dataset_links.py  update_quadkeys.py
cbl_workflow/: README.md  __init__.py
cbl_workflow/utils/: geocode_addresses.py  normalize_address.py  shp_to_geojson.py  update_dataset_links.py
tests/: test_building_data_utils_alias.py  test_cbl_workflow_alias.py  test_chunk.py  test_common.py  test_geocode_addresses.py  test_geojson_helpers.py  test_normalize_address.py  test_open_street_map.py  test_shp_to_geojson.py  test_ubid.py  test_update_dataset_links.py  test_update_quadkeys.py
tests/data/: covered-buildings.csv  covered-buildings.geojson  test_shapefile.shp
utils/: __init__.py  common.py  geocode_addresses.py  normalize_address.py  open_street_map.py  shp_to_geojson.py  ubid.py  update_quadkeys.py
