[tool.poetry]
name = "cbl-workflow"
version = "0.1.0"
description = ""
authors = ["Alex Swindler <alex.swinder@nrel.gov>", "Nicholas Long <nicholas.long@nrel.gov>"]
readme = "README.md"
packages = [{ include = "cbl_workflow", from = "." }]

[tool.poetry.dependencies]
python = ">=3.9, <3.13"

# use https because SSH doesn't work on github actions.
pnnl-buildingid = {git = "https://github.com/seed-platform/buildingid.git", rev = "main"}
usaddress = "0.5.15"
street-address = "0.4.0"
geopandas = "^1.0.1"
mercantile = "^1.2.1"
python-dotenv = "^1.0.1"
requests = "^2.32.3"
shapely = "^2.0.6"
setuptools = "^80.9.0"
nominatim = "^0.1"
geopy = "^2.4.1"

[tool.poetry.group.dev.dependencies]
pre-commit = "^4.0.1"
pytest = "^8.3.5"

[build-system]
# Need to provide the build system information for the package to be built
requires = ["poetry-core", "setuptools", "wheel"]
build-backend = "poetry.core.masonry.api"
